fix(API): change get by uris services from GET to POST methohd to avoid too long URL request
OpenSILEX/opensilex-dev!1510